@@ -122,8 +122,7 @@ conditions:
 .IP "23 Thread error"
 .PP
 .SH SIGNAL HANDLING
-Please note that due to mmap issues, aide cannot be terminated with
-SIGTERM. Use SIGKILL to terminate.
+SIGTERM is ignored, use SIGKILL to terminate aide.
 
 SIGHUP is also ignored.
 
