@@ -84,22 +84,9 @@
 /* This define should be somewhere else */
 #define READ_BLOCK_SIZE 16777216
 
-/* Redhat 5.0 needs this */
-#ifdef HAVE_MMAP
-#ifndef MAP_FAILED
-#define MAP_FAILED  (-1)
-#endif /* MAP_FAILED */
-#define MMAP_BLOCK_SIZE 16777216
-#endif /* HAVE_MMAP */
-
 /*
 #include <gcrypt.h>
 */
-pid_t pid = -1;
-int p_parent_to_child[2];
-int p_child_to_parent[2];
-int p_stderr[2];
-
 typedef union fd {
     int plain;
 #ifdef WITH_ZLIB
@@ -119,63 +106,6 @@ typedef struct hashsums_file {
     fd fd;
     compression compression;
 } hashsums_file;
-
-static void  read_from_parent(int filedes, void *buf, ssize_t count, int child_pid) {
-    ssize_t bytes_read = read(filedes, buf, count);
-    if (bytes_read != count) {
-        if (bytes_read < 0) {
-            log_msg(LOG_LEVEL_WARNING, "hash calculation(child:%d): failed to read %d bytes from pipe: %s", count, child_pid, strerror(errno));
-        } else {
-            log_msg(LOG_LEVEL_WARNING, "hash calculation(child:%d): only %d of %d bytes read from pipe", bytes_read, count, child_pid);
-        }
-        exit(1);
-    }
-}
-
-static void write_to_parent(int filedes, void *buf, ssize_t count, int child_pid) {
-    ssize_t bytes_written = write(filedes, buf, count);
-    if (bytes_written != count) {
-        if (bytes_written < 0) {
-            log_msg(LOG_LEVEL_WARNING, "hash calculation(child:%d): failed to write %d bytes to pipe: %s", count, child_pid, strerror(errno));
-        } else {
-            log_msg(LOG_LEVEL_WARNING, "hash calculation(child:%d): only %d of %d bytes written to pipe", bytes_written, count, child_pid);
-        }
-        exit(1);
-    }
-}
-
-static bool read_from_child(int filedes, void *buf, ssize_t count, const char* path) {
-    ssize_t bytes_read = read(filedes, buf, count);
-    if (bytes_read != count) {
-        if (bytes_read < 0) {
-            log_msg(LOG_LEVEL_WARNING, "hash calculation(parent): failed to read %d bytes from pipe: %s (hash for '%s' could not be calculated)", count, strerror(errno), path);
-        } else {
-            log_msg(LOG_LEVEL_WARNING, "hash calculation(parent): only %d of %d bytes read from pipe (hash for '%s' could not be calculated)", bytes_read, count, path);
-        }
-        return false;
-    }
-    return true;
-
-}
-
-static bool write_to_child(int filedes, void *buf, ssize_t count, const char* path) {
-    ssize_t bytes_written = write(filedes, buf, count);
-    if (bytes_written != count) {
-        if (bytes_written < 0) {
-            log_msg(LOG_LEVEL_WARNING, "hash calculation(parent): failed to write %d bytes to pipe: %s (hash for '%s' could not be calculated)", count, strerror(errno), path);
-        } else {
-            log_msg(LOG_LEVEL_WARNING, "hash calculation(parent): only %d of %d bytes written to pipe (hash for '%s' could not be calculated)", bytes_written, count, path);
-        }
-        return false;
-    }
-    return true;
-}
-
-static void write_empty_md_hashsums(int filedes, int child_pid) {
-    md_hashsums md_hash;
-    md_hash.attrs = 0LU;
-    write_to_parent(filedes, &md_hash, sizeof(md_hash), child_pid);
-}
 
 int stat_cmp(struct stat* f1,struct stat* f2, bool growing) {
   if (f1==NULL || f2==NULL) {
@@ -268,11 +198,6 @@ md_hashsums calc_hashsums(char* fullpath, DB_ATTR_TYPE attr, struct stat* old_fs
     md_hashsums md_hash;
     md_hash.attrs = 0LU;
 
-    if (
-#ifdef WITH_PTHREAD
-    conf->num_workers ||
-#endif
-    limit_size > 0 || uncompress || attr&ATTR(attr_growing)) {
         struct stat new_fs;
         int sres=0;
         int stat_diff,filedes;
@@ -402,266 +327,6 @@ md_hashsums calc_hashsums(char* fullpath, DB_ATTR_TYPE attr, struct stat* old_fs
                 return md_hash;
             }
         }
-    } else {
-        int wstatus;
-        bool fork_child = false;
-        if (pid == -1) {
-            log_msg(LOG_LEVEL_DEBUG, "calc_hashsums(parent): child not yet started", pid);
-            fork_child = true;
-        } else if (waitpid(pid, &wstatus, WNOHANG) < 0) {
-            if (WTERMSIG(wstatus) == SIGBUS) {
-#ifdef HAVE_SIGABBREV_NP
-                log_msg(LOG_LEVEL_DEBUG, "calc_hashsums(parent): child process %d caught signal 'SIG%s'", pid, sigabbrev_np(WTERMSIG(wstatus)));
-#else
-                log_msg(LOG_LEVEL_DEBUG, "calc_hashsums(parent): child process %d caught signal '%s'", pid, strsignal(WTERMSIG(wstatus)));
-#endif
-            }
-            close(p_parent_to_child[1]);
-            close(p_child_to_parent[0]);
-            close(p_stderr[0]);
-            log_msg(LOG_LEVEL_DEBUG, "calc_hashsums(parent): child process %d not running, forking new child", pid);
-            fork_child = true;
-        } else {
-            log_msg(LOG_LEVEL_DEBUG, "calc_hashsums(parent): child process %d running", pid);
-        }
-        if (fork_child) {
-            if (pipe(p_parent_to_child) == -1) {
-                log_msg(LOG_LEVEL_WARNING, "calc_hashsums(parent): pipe() (parent_to_child) failed: %s (hashsums for '%s' could not be calculated)", strerror(errno), fullpath);
-                return md_hash;
-            }
-            if (pipe(p_child_to_parent) == -1) {
-                log_msg(LOG_LEVEL_WARNING, "calc_hashsums(parent): pipe() (child_to_parent) failed: %s (hashsums for '%s' could not be calculated)", strerror(errno), fullpath);
-                return md_hash;
-            }
-            if (pipe(p_stderr) == -1) {
-                log_msg(LOG_LEVEL_WARNING, "calc_hashsums(parent): pipe() (stderr) failed: %s (hashsums for '%s' could not be calculated)", strerror(errno), fullpath);
-                return md_hash;
-            }
-            if (fcntl(p_stderr[0], F_SETFL, O_NONBLOCK) == -1) {
-                log_msg(LOG_LEVEL_WARNING, "calc_hashsums(parent): fcntl() for stderr pipe failed: %s (hashsums for '%s' could not be calculated)", strerror(errno), fullpath);
-                return md_hash;
-            }
-            if ((pid = fork()) == -1) {
-                log_msg(LOG_LEVEL_WARNING, "calc_hashsums(parent): fork failed: %s (hashsums for '%s' could not be calculated)", strerror(errno), fullpath);
-                return md_hash;
-            }
-        }
-        if(pid == 0) { /* child */
-            pid_t child_pid = getpid();
-#ifdef HAVE_SYS_PRCTL_H
-            prctl(PR_SET_PDEATHSIG, SIGKILL);
-            if (getppid() == 1) {
-                exit(0);
-            }
-#endif
-            close(p_parent_to_child[1]);
-            close(p_child_to_parent[0]);
-            close(p_stderr[0]);
-            dup2 (p_stderr[1], STDERR_FILENO);
-            close(p_stderr[1]);
-
-            char child_fullpath[PATH_MAX];
-            struct stat child_old_fs;
-            DB_ATTR_TYPE child_attr;
-            log_msg(LOG_LEVEL_DEBUG, "calc_hashsums(child:%d): forked child", child_pid);
-
-            while(true) {
-                read_from_parent(p_parent_to_child[0], &child_attr, sizeof(DB_ATTR_TYPE), child_pid);
-                read_from_parent(p_parent_to_child[0], &child_old_fs, sizeof(struct stat), child_pid);
-                if (read(p_parent_to_child[0], child_fullpath,  PATH_MAX) < 1) {
-                    log_msg(LOG_LEVEL_WARNING, "hash calculation(child:%d): failed to read from pipe: %s", child_pid, strerror(errno));
-                    exit(1);
-                }
-                log_msg(LOG_LEVEL_DEBUG, "%s> calc_hashsums(child:%d): got filename: '%s' (attr: %lu)", child_fullpath, child_pid, child_fullpath, child_attr);
-
-                struct stat new_fs;
-                int sres=0;
-                int stat_diff,filedes;
-
-#ifdef HAVE_O_NOATIME
-                filedes=open(child_fullpath,O_RDONLY|O_NOATIME);
-                if(filedes<0) {
-#endif
-                    filedes=open(child_fullpath,O_RDONLY);
-#ifdef HAVE_O_NOATIME
-                }
-#endif
-                if (filedes==-1) {
-                    log_msg(LOG_LEVEL_WARNING, "hash calculation(child:%d): open() failed for %s: %s (hashsums could not be calculated)", child_pid, child_fullpath, strerror(errno));
-                    write_empty_md_hashsums(p_child_to_parent[1], child_pid);
-                    continue;
-                }
-                sres=fstat(filedes,&new_fs);
-                if (sres != 0) {
-                    log_msg(LOG_LEVEL_WARNING, "hash calculation(child:%d): fstat() failed for '%s': %s (hashsums could not be calculated)", child_pid, child_fullpath, strerror(errno));
-                    write_empty_md_hashsums(p_child_to_parent[1], child_pid);
-                    continue;
-                }
-                if(!(child_attr&ATTR(attr_rdev))) {
-                    new_fs.st_rdev=0;
-                }
-#ifdef HAVE_POSIX_FADVISE
-                if (posix_fadvise(filedes,0,new_fs.st_size,POSIX_FADV_NOREUSE)!=0) {
-                    log_msg(LOG_LEVEL_DEBUG, "%s> calc_hashsums(child:%d): posix_fadvise error for '%s': %s", child_fullpath, child_pid, child_fullpath, strerror(errno));
-                }
-#endif
-                if ((stat_diff=stat_cmp(&new_fs,&child_old_fs, attr&ATTR(attr_growing))) != RETOK) {
-                    DB_ATTR_TYPE changed_attribures = 0ULL;
-                    for(ATTRIBUTE i=0;i<num_attrs;i++) {
-                        if (((1<<i)&stat_diff)!=0) {
-                            changed_attribures |= 1<<i;
-                        }
-                    }
-                    char *str;
-                    log_msg(LOG_LEVEL_WARNING, "hash calculation(child:%d): '%s' has been changed (changed attributes: %s, hash could not be calculated)", child_pid, child_fullpath, str = diff_attributes(0, changed_attribures));
-                    free(str);
-                    close(filedes);
-                    write_empty_md_hashsums(p_child_to_parent[1], child_pid);
-                    continue;
-                } else {
-                    off_t r_size=0;
-                    off_t size=0;
-                    char* buf;
-
-                    struct md_container mdc;
-                    mdc.todo_attr = child_attr;
-                    if (init_md(&mdc, child_fullpath)==RETOK) {
-                        log_msg(LOG_LEVEL_DEBUG, "%s> calculate hashes for '%s'", child_fullpath, child_fullpath);
-#ifdef HAVE_MMAP
-                            off_t curpos=0;
-
-                            r_size=new_fs.st_size; /* in mmap branch r_size is used as size remaining */
-                            while (r_size>0) {
-                                if (r_size<MMAP_BLOCK_SIZE) {
-#ifdef __hpux
-                                    buf = mmap(0,r_size,PROT_READ,MAP_PRIVATE,filedes,curpos);
-#else
-                                    buf = mmap(0,r_size,PROT_READ,MAP_SHARED,filedes,curpos);
-#endif
-                                    curpos+=r_size;
-                                    size=r_size;
-                                    r_size=0;
-                                } else {
-#ifdef __hpux
-                                    buf = mmap(0,MMAP_BLOCK_SIZE,PROT_READ,MAP_PRIVATE,filedes,curpos);
-#else
-                                    buf = mmap(0,MMAP_BLOCK_SIZE,PROT_READ,MAP_SHARED,filedes,curpos);
-#endif
-                                    curpos+=MMAP_BLOCK_SIZE;
-                                    size=MMAP_BLOCK_SIZE;
-                                    r_size-=MMAP_BLOCK_SIZE;
-                                }
-                                if ( buf == MAP_FAILED ) {
-                                    log_msg(LOG_LEVEL_WARNING, "hash calculation(child:%d): error mmap'ing '%s': %s (hashsums could not be calculated)", child_pid, child_fullpath, strerror(errno));
-                                    close(filedes);
-                                    close_md(&mdc, NULL, child_fullpath);
-                                    write_empty_md_hashsums(p_child_to_parent[1], child_pid);
-                                    continue;
-                                }
-
-                                if (update_md(&mdc,buf,size)!=RETOK) {
-                                    log_msg(LOG_LEVEL_WARNING, "hash calculation(child:%d): update_md() failed for '%s' (hashsums could not be calculated)", child_pid, child_fullpath);
-                                    close(filedes);
-                                    close_md(&mdc, NULL, child_fullpath);
-                                    munmap(buf,size);
-                                    write_empty_md_hashsums(p_child_to_parent[1], child_pid);
-                                    continue;
-                                }
-                                munmap(buf,size);
-                            }
-                            close_md(&mdc, &md_hash, child_fullpath);
-                            close(filedes);
-                            write(p_child_to_parent[1], &md_hash, sizeof(md_hash));
-                            continue;
-#endif /* HAVE_MMAP */
-                        buf=checked_malloc(READ_BLOCK_SIZE);
-#if READ_BLOCK_SIZE>SSIZE_MAX
-#error "READ_BLOCK_SIZE" is too large. Max value is SSIZE_MAX, and current is READ_BLOCK_SIZE
-#endif
-                        while ((size=TEMP_FAILURE_RETRY(read(filedes,buf,READ_BLOCK_SIZE)))>0) {
-                            if (update_md(&mdc,buf,size)!=RETOK) {
-                                log_msg(LOG_LEVEL_WARNING, "hash calculation: update_md() failed for '%s' (hashsums could not be calculated)", child_fullpath);
-                                free(buf);
-                                close(filedes);
-                                close_md(&mdc, NULL, child_fullpath);
-                                write_empty_md_hashsums(p_child_to_parent[1], child_pid);
-                                continue;
-                            }
-                            r_size+=size;
-                        }
-                        if (r_size != new_fs.st_size) {
-                            log_msg(LOG_LEVEL_WARNING, "hash calculation: number of bytes read (%lld) mismatches stat size (%lld) for '%s' (%shashsums could not be calculated)",
-                                    (long long) r_size, (long long) child_old_fs.st_size, child_fullpath, r_size<new_fs.st_size?"was file truncated while AIDE was running?, ":"");
-                            free(buf);
-                            close(filedes);
-                            close_md(&mdc, NULL, child_fullpath);
-                            write_empty_md_hashsums(p_child_to_parent[1], child_pid);
-                            continue;
-                        }
-
-                        free(buf);
-                        close(filedes);
-                        close_md(&mdc, &md_hash, child_fullpath);
-                        write_to_parent(p_child_to_parent[1], &md_hash, sizeof(md_hash), child_pid);
-                        continue;
-                    } else {
-                        log_msg(LOG_LEVEL_WARNING, "hash calculation(child:%d): init_md() failed for '%s' (hashsums could not be calculated)", child_pid, child_fullpath);
-                        close(filedes);
-                        write_empty_md_hashsums(p_child_to_parent[1], child_pid);
-                        continue;
-                    }
-                }
-            }
-        } else { /* parent */
-            if (fork_child) {
-                close(p_parent_to_child[0]);
-                close(p_child_to_parent[1]);
-                close(p_stderr[1]);
-            }
-
-            log_msg(LOG_LEVEL_DEBUG, "%s> hash calculation(parent): send filename '%s' (attr: %lu) to child process %d", fullpath, fullpath, attr, pid);
-            if (write_to_child(p_parent_to_child[1], &attr, sizeof(DB_ATTR_TYPE), fullpath)) {
-                if (write_to_child(p_parent_to_child[1], old_fs, sizeof(struct stat), fullpath)) {
-                    if (write_to_child(p_parent_to_child[1], fullpath, strlen(fullpath)+1, fullpath)) {
-                        if (!read_from_child(p_child_to_parent[0], &md_hash, sizeof(md_hash), fullpath)) {
-                            md_hash.attrs = 0LU;
-                        };
-                    }
-                }
-            }
-
-            char* child_stderr = pipe2string(p_stderr[0]);
-
-            char* newline;
-            char* buffer = child_stderr;
-            while (buffer && *buffer != '\0') {
-                newline = strchr(buffer, '\n');
-                if (newline != NULL) {
-                    stderr_msg("%.*s\n", newline-buffer, buffer);
-                    buffer = newline+1;
-                } else {
-                    stderr_msg("%s\n", buffer);
-                    break;
-                }
-            }
-            free(child_stderr);
-
-            int wpid_result = waitpid(pid, &wstatus, WNOHANG);
-            log_msg(LOG_LEVEL_TRACE, "%s> calc_hashsums(parent): waitpid returns %d for child pid %d", fullpath, wpid_result, pid);
-            if (wpid_result > 0 && WIFSIGNALED(wstatus)) {
-                if (WTERMSIG(wstatus) == SIGBUS) {
-                    log_msg(LOG_LEVEL_WARNING, "hash calculation failed for '%s': child process %d caught 'SIGBUS' (was file truncated while AIDE was running?, hash could not be calculated)", fullpath, pid);
-                } else {
-#ifdef HAVE_SIGABBREV_NP
-                    log_msg(LOG_LEVEL_WARNING, "hash calculation failed for '%s': child process %d caught signal 'SIG%s' (hash could not be calculated)", fullpath, pid, sigabbrev_np(WTERMSIG(wstatus)));
-#else
-                    log_msg(LOG_LEVEL_WARNING, "hash calculation failed for '%s': child process %d caught signal '%s' (hash could not be calculated)", fullpath, pid, strsignal(WTERMSIG(wstatus)));
-#endif
-                }
-            }
-        }
-    }
-    return md_hash;
 }
 
 void fs2db_line(struct stat* fs,db_line* line) {
